--- a/index.html
+++ b/index.html
@@ -1,24 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PetFinder - Keep Your Pets Safe with QR Codes</title>
-    <meta name="description" content="Generate QR codes for your pets. When scanned, your contact details appear instantly - helping reunite lost pets with their families." />
+    <meta name="description" content="Generate QR codes for your pets. When scanned, your contact details appear instantly." />
     <meta name="author" content="PetFinder" />
-
-    <meta property="og:title" content="PetFinder - Keep Your Pets Safe with QR Codes" />
-    <meta property="og:description" content="Generate QR codes for your pets. When scanned, your contact details appear instantly." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
-
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+</head>
+<body>
+    <script>
+        // Redirect to public folder
+        window.location.href = '/index.html';
+    </script>
+</body>
 </html>
