--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            background: #f8f9fa;
             min-height: 100vh;
-            color: #333;
+            color: #2c3e50;
         }
 
         .hero-section {
@@ -54,7 +54,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: linear-gradient(135deg, rgba(255, 239, 180, 0.85) 0%, rgba(255, 255, 255, 0.9) 50%, rgba(57, 182, 242, 0.85) 100%);
+            background: linear-gradient(135deg, rgba(45, 52, 96, 0.75) 0%, rgba(26, 84, 144, 0.75) 100%);
             z-index: 1;
         }
 
@@ -68,20 +68,20 @@
 
         .hero-content h1 {
             font-size: 56px;
-            color: #003d7a;
+            color: #ffffff;
             margin-bottom: 20px;
             font-weight: 900;
-            text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.5);
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
             line-height: 1.2;
         }
 
         .hero-content p {
             font-size: 20px;
-            color: #1a5490;
+            color: #e8f0f7;
             margin-bottom: 40px;
             font-weight: 500;
             line-height: 1.6;
-            text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.3);
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
         }
 
         .stats-container {
@@ -96,29 +96,29 @@
         }
 
         .stat-box {
-            background: linear-gradient(135deg, #ffef84 0%, #39b6f2 100%);
+            background: linear-gradient(135deg, #2d3460 0%, #1a5490 100%);
             padding: 25px;
             border-radius: 12px;
             text-align: center;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 8px 24px rgba(26, 84, 144, 0.2);
             transform: transition 0.3s ease;
         }
 
         .stat-box:hover {
             transform: translateY(-5px);
-            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
+            box-shadow: 0 12px 32px rgba(26, 84, 144, 0.3);
         }
 
         .stat-number {
             font-size: 36px;
             font-weight: 900;
-            color: #003d7a;
+            color: #00d9ff;
             margin-bottom: 10px;
         }
 
         .stat-label {
             font-size: 14px;
-            color: #1a5490;
+            color: #e8f0f7;
             font-weight: 600;
         }
 
@@ -132,7 +132,7 @@
 
         .story-section h2 {
             font-size: 40px;
-            color: #003d7a;
+            color: #1a5490;
             margin-bottom: 30px;
             text-align: center;
         }
@@ -164,7 +164,7 @@
         }
 
         .why-section {
-            background: linear-gradient(135deg, #ffef84 0%, #fff 50%, #39b6f2 100%);
+            background: linear-gradient(135deg, #2d3460 0%, #1a5490 100%);
             padding: 60px 40px;
             border-radius: 20px;
             margin: 60px 0;
@@ -172,7 +172,7 @@
 
         .why-section h2 {
             font-size: 36px;
-            color: #003d7a;
+            color: #ffffff;
             margin-bottom: 40px;
             text-align: center;
         }
@@ -193,7 +193,7 @@
 
         .why-card h3 {
             font-size: 20px;
-            color: #1a5490;
+            color: #2d3460;
             margin-bottom: 15px;
             font-weight: 700;
         }
