Clean chatbot tone (no emojis) and allow greetings

--- a/index.html
+++ b/index.html
@@ -2559,14 +2559,14 @@
                             <div class="chatbot-container">
                             <div class="chat-messages" id="chatMessages">
                                 <div class="bot-message">
-                                    <div class="message-avatar">🤖</div>
+                                    <div class="message-avatar">Bot</div>
                                     <div class="message-content">
                                         <p>Hi! I'm PetBot, your pet care assistant. Ask me anything about:</p>
                                         <ul>
-                                            <li>🏥 Pet health and symptoms</li>
-                                            <li>🍖 Feeding and nutrition</li>
-                                            <li>🎾 Training and behavior</li>
-                                            <li> Emergency situations</li>
+                                            <li>Pet health and symptoms</li>
+                                            <li>Feeding and nutrition</li>
+                                            <li>Training and behavior</li>
+                                            <li>Emergency situations</li>
                                         </ul>
                                         <p>How can I help you today?</p>
                                     </div>
@@ -2581,9 +2581,9 @@
                                 
                                 <div class="quick-questions">
                                     <p>Quick questions:</p>
-                                    <button class="quick-btn" data-question="My pet is missing, what should I do?"> Pet is missing</button>
-                                    <button class="quick-btn" data-question="How often should I feed my dog?">🍖 Feeding schedule</button>
-                                    <button class="quick-btn" data-question="First aid for pets">🏥 First aid tips</button>
+                                    <button class="quick-btn" data-question="My pet is missing, what should I do?">Pet is missing</button>
+                                    <button class="quick-btn" data-question="How often should I feed my dog?">Feeding schedule</button>
+                                    <button class="quick-btn" data-question="First aid for pets">First aid tips</button>
                                 </div>
 
                                 <div class="prompt-controls">
